-
Bug
-
Resolution: Done
-
P1: Critical
-
5.0.0
-
Mac OS 10.8
-
c90d9b697f6ef549d33047332a9c44b40ded63f5
The QMainWindow is closed but the application runs if the closeEvent of the MainWindow is ignored.
For Gerrit Dashboard: QTBUG-28965 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
51076,3 | Fix ignoring close events on OSX | stable | qt/qtbase | Status: MERGED | +2 | 0 |
51562,1 | Fix ignoring close events on OSX | dev | qt/qtbase | Status: ABANDONED | 0 | 0 |