src/plugins/platforms/cocoa/qcocoawindow.mm
@@ -684,10 +684,12 @@ void QCocoaWindow::windowDidResize()
     [m_qtView updateGeometry];
 }
 
-void QCocoaWindow::windowWillClose()
+bool QCocoaWindow::windowShouldClose()
 {
-    QWindowSystemInterface::handleCloseEvent(window());
+    bool accepted = false;
+    QWindowSystemInterface::handleCloseEvent(window(), &accepted);
     QWindowSystemInterface::flushWindowSystemEvents();
+    return accepted;
 }
 
 bool QCocoaWindow::windowIsPopupType(Qt::WindowType type) const
